fix text spacing in each course page

--- a/courses/frontend-dev/frontend-dev.css
+++ b/courses/frontend-dev/frontend-dev.css
@@ -167,10 +167,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 10px 0;
 }
 .course_content_title {
   font-size: 32px;
   font-weight: 700;
+  margin: 5px 0;
 }
 .course_content_desc {
   font-size: 24px;
